[gd_scene load_steps=7 format=3 uid="uid://cgjy71b33jh0a"]

[ext_resource type="Script" path="res://UtilityScenes/transaction_entry.gd" id="1_i7omd"]
[ext_resource type="Texture2D" uid="uid://cw2iertj72ya" path="res://resources/images/entry.png" id="1_w55dn"]
[ext_resource type="Texture2D" uid="uid://bik1x256t7m4m" path="res://resources/images/logo.png" id="3_iolak"]
[ext_resource type="FontFile" uid="uid://vit02gnuv6r8" path="res://resources/fonts/8bitOperatorPlus8-Bold.ttf" id="4_0veah"]

[sub_resource type="LabelSettings" id="LabelSettings_arn4q"]
font = ExtResource("4_0veah")
font_size = 18

[sub_resource type="RectangleShape2D" id="RectangleShape2D_20h17"]
size = Vector2(126, 50)

[node name="TransactionEntry" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_i7omd")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_w55dn")

[node name="HBoxContainer" type="HBoxContainer" parent="Sprite2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -25.0
offset_right = -63.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Sprite2D/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2

[node name="LogoTexture" type="TextureRect" parent="Sprite2D/HBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_iolak")
stretch_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="Sprite2D/HBoxContainer"]
layout_mode = 2

[node name="PriceLabel" type="Label" parent="Sprite2D/HBoxContainer/CenterContainer"]
layout_mode = 2
text = "$16.00"
label_settings = SubResource("LabelSettings_arn4q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_20h17")

[connection signal="input_event" from="." to="." method="_on_area_2d_input_event"]
